replace plyr by dplyr
it's maintained, on average faster and the code is simpler

- isobar.parallel replaced by isobar.cluster
- some parallelization was disabled (see FIXME), but it should
  be easy to restore using multidplyr

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 CHANGES IN VERSION 1.16.1
+ - switch from plyr to dplyr
  - use the default perl interpreter (the first found in $PATH) rather than /usr/bin/perl
    for report generation
 
