--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ CHANGES IN VERSION 1.16.1
    different samples
  - added partitionLabels(ibspectra) that allow restricting certain ratio
    combinations
+ - getProteinInfoFromFasta() to extract protein information from UniProt FASTA files
  - switch from plyr to dplyr
  - use the default perl interpreter (the first found in $PATH) rather than /usr/bin/perl
    for report generation
